# bayesGP

./: COPYING  DESCRIPTION.in  Makefile.am  configure.ac
inst/: bayesGP.m.in  cv_error.m.in  gp.m.in  gpX.m.in  logit.m.in  logitinv.m.in  r_pred.m.in  scf_gaussian.m.in  scf_gaussianm.m.in  scf_gaussianu.m.in  ssp.m.in  sst.m.in  welford_mean.m.in
